added a check in the cmakelists.txt files which detects windows and linux and links apropriately. Linux linking is currently hardcoded as a string and has to be updated manually. We might want to make this detect automatically

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,14 @@
 cmake_minimum_required (VERSION 2.8)
 project (GameFromScratch)
 
-# Link against Allegro libraries
+IF(WIN32)
+# Link against Allegro libraries if on windows
 set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lallegro")
-
+ENDIF(WIN32)
 # Put the binary file in /bin
 set (EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR}/bin)
 
 add_subdirectory (src)
+
+
+    
