fix compilation issue with windowTest

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,12 +8,12 @@ set(WindowTest_inc
 
 #message(${GameFromScratch_IncludeDirs})
 
-
 INCLUDE_DIRECTORIES(${GameFromScratch_IncludeDirs})
-
 
 add_executable(WindowTest ${WindowTest_src} ${WindowTest_inc})
 
+find_package(OpenGL)
+target_link_libraries(WindowTest glfw ${OPENGL_LIBRARIES})
+
 LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/lib)
 TARGET_LINK_LIBRARIES(WindowTest GameFromScratch)
-
